# SASNN

./: .gitignore  CMakeLists.txt  LICENSE
include/: Dataset.h  Matrix2D.h  functors.h  stdafx.h
include/Core/: Matrix2D.h  Random.h  functors.h
include/Dataset/: Dataset.h  DatasetStandard.h
include/Layer/: Layer.h  LayerData.h  LayerFullyConnected.h  LayerWeights.h
include/Layer/Abstract/: Layer.h  LayerDynamic.h
include/Layer/Accuracy/: LayerClassificationAccuracy.h  LayerRegressionAccuracy.h
include/Layer/Functional/: LayerBatchNormalization.h  LayerClamp.h  LayerExp.h  LayerFullyConnected.h  LayerL2Reg.h  LayerLeastSquaresRegression.h  LayerLog.h  LayerSoftMax.h  LayerStableSoftMax.h  LayerSum.h
include/Layer/LayerDecorators/: DecoratorGradientDescent.h  DecoratorInitializer.h
include/Layer/Loss/: LayerCrossEntropyLoss.h
include/Layer/NLF/: LayerLeakyReLU.h  LayerReLU.h  LayerSigmoid.h  LayerSigmoidParametric.h  LayerTanh.h
include/Layer/Resulting/: LayerStableSoftMax.h
include/Layer/Simple/: LayerData.h  LayerWeights.h
include/NeuralNetwork/: ClassificationNN.h  NeuralNetwork.h  RegressionNN.h
src/: Dataset.cpp  Matrix2D.cpp  functors.cpp  main.cpp  test.cpp
src/Core/: Matrix2D.cpp  Matrix2D.h  Random.cpp  Random.h  functors.cpp
src/Dataset/: Dataset.cpp  DatasetStandard.cpp
src/Layer/: LayerData.cpp  LayerData.h  LayerExp.cpp  LayerExp.h  LayerFullyConnected.cpp  LayerFullyConnected.h  LayerLeakyReLU.cpp  LayerLeakyReLU.h  LayerReLU.cpp  LayerReLU.h  LayerSigmoid.cpp  LayerSigmoid.h  LayerSoftMax.cpp  LayerSoftMax.h  LayerSoftMaxCol.cpp  LayerSoftMaxCol.h  LayerSoftMaxRow.cpp  LayerSoftMaxRow.h  LayerSumCols.cpp  LayerSumCols.h  LayerTanh.cpp  LayerTanh.h  LayerWeights.cpp  LayerWeights.h
src/Layer/Abstract/: Layer.cpp  LayerDynamic.cpp
src/Layer/Accuracy/: LayerClassificationAccuracy.cpp  LayerRegressionAccuracy.cpp
src/NeuralNetwork/: ClassificationNN.cpp  NeuralNetwork.cpp  RegressionNN.cpp
(+66 files in other folders)
